# RealtimeTTS

./: .gitignore  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
RealtimeTTS/: __init__.py
RealtimeTTS/engines/: __init__.py  chatterbox_engine.py
tts_server/: Dockerfile  README.md  __init__.py  app.py  model_manager.py  requirements.txt
